--- a/style.css
+++ b/style.css
@@ -7,7 +7,7 @@
 }
 
 body{
- background-color: rgb(222, 153, 26);
+ background-color: rgb(212, 139, 3);
 }
  
 h1,h2,h3,h4,h5{
@@ -42,15 +42,21 @@ input{
    margin-left: 30px;
 }
 .header{
- height: 100px;
+ height: 150px;
  padding: 20px;
- background-color: rgba(246, 223, 199, 0.9);
+ background-image: url(./assets/92b83644-debf-4e79-bd95-5ce1f385c860.jpeg);
+ background-size: cover;
+ background-position: center;
 }
 .header h3{
    margin-top: 0;
    font-weight: bold;
    font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
    font-size: 25px;
+   color:white;
+   text-transform: uppercase;
+   -webkit-text-stroke: 2px #313131;
+   
   
    
 }
@@ -66,6 +72,9 @@ input{
    border-bottom: 1px solid #fdfdfd;
    height: 45px;
 }
+
+
+
 h1{
    border-top: 1px solid #dfd99b ;
    
@@ -97,6 +106,7 @@ p, label{
 .form-title{
    margin-bottom: 15px;
    padding-top: 15px;
+   
 
 }
 .form-body p{
@@ -131,7 +141,7 @@ margin-bottom: 15px;
    transition: 0.5s;
 }
 .bnt-submit:hover{
-   background-color: #f3f5d7;
+   background-color: #dfe0d8;
    border: 3px solid #e5bc06;
    color: #e5bc06;
 }
