--- a/style.css
+++ b/style.css
@@ -7,7 +7,7 @@
 }
 
 body{
- background-color: rgb(212, 139, 3);
+ background-color: rgb(167, 225, 224);
 }
  
 h1,h2,h3,h4,h5{
@@ -49,13 +49,14 @@ input{
  background-position: center;
 }
 .header h3{
-   margin-top: 0;
+   margin-top: 30px;
    font-weight: bold;
    font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
-   font-size: 25px;
+   font-size: 30px;
    color:white;
    text-transform: uppercase;
-   -webkit-text-stroke: 2px #313131;
+   text-align: center;
+   
    
   
    
@@ -84,7 +85,6 @@ p, label{
    margin-top: 20px;
    
 }
-
 
 .required-field{
    color: red;
@@ -131,17 +131,17 @@ p, label{
 margin-bottom: 15px;
 }
 .bnt-submit{
-   background-color: #e5bc06;
+   background-color: #c7c8c8;
    color: #363434;
    border: 2px solid transparent;
    width: 150px;
    height: 50px;
    cursor: pointer;
    text-transform: uppercase;
-   transition: 0.5s;
+   transition: 0.1s;
 }
 .bnt-submit:hover{
-   background-color: #dfe0d8;
-   border: 3px solid #e5bc06;
-   color: #e5bc06;
+   background-color: #bbc1c3;
+   border: 3px solid white;
+   
 }
