--- a/style.css
+++ b/style.css
@@ -7,7 +7,7 @@
 }
 
 body{
- background-color: rgb(167, 225, 224);
+ background-color: rgb(254, 247, 231);
 }
  
 h1,h2,h3,h4,h5{
@@ -42,20 +42,22 @@ input{
    margin-left: 30px;
 }
 .header{
- height: 150px;
+ height: 300px;
  padding: 20px;
- background-image: url(./assets/92b83644-debf-4e79-bd95-5ce1f385c860.jpeg);
+ background-image:url(./assets.com/Facebook\ cover\ -\ 1.png);
  background-size: cover;
  background-position: center;
 }
 .header h3{
-   margin-top: 30px;
+   margin-top: 150px;
    font-weight: bold;
-   font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+   font-family: Helvetica, ;
    font-size: 30px;
-   color:white;
+   color:rgb(7, 7, 7);
+   background-color: #c7c8c8;
+   display: inline-block;
    text-transform: uppercase;
-   text-align: center;
+   margin-left: 400px;
    
    
   
